--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,13 @@
 __pycache__/
 *.py[cod]
 *$py.class
-
 # C extensions
 *.so
 
 # Distribution / packaging
 .Python
+*.env
+
 build/
 develop-eggs/
 dist/
